# hasher

./: Cargo.toml
src/: lib.rs  openssl.rs  sha3.rs
