[package]
name = "hasher"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"], optional = true }
paste = { version = "1.0.7", optional = true }

[dev-dependencies]
anyhow = "1.0.58"
hex = "0.4.3"
paste = "1.0.7"

[features]
openssl = ["dep:openssl", "dep:paste"]
